--- a/src/frontend/views/home.html
+++ b/src/frontend/views/home.html
@@ -75,7 +75,7 @@
         <!--<button id="fab">Click me</button>-->
 
         <!--Btn Start-->
-        <div id="contain-play">
+        <div>
             <a class="button clikeable" href="/players" id="btn-play" style="--clr:#8A7DFD">
                 <span class="clickeable">JUGAR</span>
                 <i class="clickeable"></i>
@@ -83,7 +83,7 @@
         </div>
 
         <!--Btn Config-->
-        <div style="display:inline" id="contain-config">
+        <div style="display:inline">
             <a href="/configuration" class="btn button clickeable" id="btn-config"
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
@@ -93,7 +93,7 @@
         </div>
 
         <!--Btn Score-->
-        <div style="display:inline" id="contain-config">
+        <div style="display:inline">
             <a href="/score" class="btn button clickeable" id="btn-score" 
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
@@ -102,15 +102,25 @@
             </a>
         </div>
 
-        <!--Btn Usuario-->
-        <div style="display:inline" id="contain-usuario">
-            <a class="btn button clickeable" id="btn-user" href="/signup"
+        <div style="display:inline">
+            <a class="btn button clickeable" id="btn-book" href="/instructions"
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="movu" class="clickeable"></i>
-                <i class="bx bx-user clickeable"></i>
+                <i class="bx bx-book-open clickeable"></i>
             </a>
         </div>
+
+        <!--Btn Usuario-->
+        <div style="display:inline">
+            <button class="btn button clickeable" id="btn-user"
+                style="--clr:#8A7DFD; display: inline-block;">
+                <span></span>
+                <i id="movu" class="clickeable"></i>
+                <i class="bx bx-exit clickeable"></i>
+            </button>
+        </div>
+
     </div>
 </div>
 <!--End Bubbles-->
