--- a/src/frontend/views/manualItems.html
+++ b/src/frontend/views/manualItems.html
@@ -1,12 +1,11 @@
-<h2 class="text-center" id="manual-title"></h2>
+<h2 class="text-center mt-sm-4 mb-5" id="manual-title"></h2>
 <p class="text-center">Hexchees es un juego de ajedrez cuyo objetivo es derrotar al oponente "comiendo" a
     todo su equipo</p>
 <p class="text-center">Dentro del juego existiran unos items que le daran habilidad a los personajes</p>
-<br><br>
-<img class="img-fluid" src="../assets/images/items.png" alt="">
 
+<img class="img-fluid" src="../assets/images/items.png" alt="">
 <div>
-    <a class="button" href="/manualpersonaje" id="btn-return" style="--clr:#8A7DFD">
+    <a class="button" href="/instructions" id="btn-return" style="--clr:#8A7DFD">
         <span></span>
         <i id="#regreso"></i>
         <i class="bx bx-undo"></i>
