--- a/src/frontend/views/manualPersonajes.html
+++ b/src/frontend/views/manualPersonajes.html
@@ -1,22 +1,20 @@
+<h2 class="text-center mt-md-4 mb-5" id="manual-title"></h2>
+<p class="text-center">Hexchees es un juego de ajedrez cuyo objetivo es derrotar al oponente "comiendo" a
+    todo su equipo</p>
+<p class="text-center">Los equipos estan conformados por distintos personajes con movimientos unicos</p>
 
-            <h2 class="text-center" id="manual-title"></h2>
-            <p class="text-center">Hexchees es un juego de ajedrez cuyo objetivo es derrotar al oponente "comiendo" a
-                todo su equipo</p>
-            <p class="text-center">Los equipos estan conformados por distintos personajes con movimientos unicos</p>
-            <br><br>
-            <img class="img-fluid" src="../assets/images/characters.png" alt="">
+<img class="img-fluid" src="../assets/images/characters.png" alt="">
 
-            <div>
-                <a class="button" href="/" id="btn-return" style="--clr:#8A7DFD">
-                    <span></span>
-                    <i id="#regreso"></i>
-                    <i class="bx bx-undo"></i>
-                </a>
-            </div>
-            <div>
-                <a class="button" href="/manualitems" id="btn-item" style="--clr:#8A7DFD">
-                    <span>Item</span>
-                    <i id="#item"></i>
-                </a>
-            </div>
- 
+<div>
+    <a class="button" href="/" id="btn-return" style="--clr:#8A7DFD">
+        <span></span>
+        <i id="#regreso"></i>
+        <i class="bx bx-undo"></i>
+    </a>
+</div>
+<div>
+    <a class="button" href="/manualitems" id="btn-item" style="--clr:#8A7DFD">
+        <span>Item</span>
+        <i id="#item"></i>
+    </a>
+</div>
