--- a/src/frontend/views/scenario.html
+++ b/src/frontend/views/scenario.html
@@ -1,42 +1,28 @@
 <div class="bubbles-circle"></div>
-<!--
-<div class="container-fluid">
-    <div class="d-flex align-items-center justify-content-center vh-100">
-        <div class="text-center">
-            <h2 id="scenario-title"></h2>
-            <div class="d-flex justify-content-around">
-                <div id="desert" class="bg-danger" style="width: 33%; height: 100%">A</div>
-                <div id="forest" class="bg-warning" style="width: 33%; height: 100%" >A</div>
-                <div id="" class="bg-success" style="width: 33%; height: 100%">A</div>
-            </div>
-        </div>
-    </div>
-</div>
--->
 <div class="container">
     <h2 id="scenario-title" class="text-center"></h2>
-        <div class="flex-container">
-            <a class="flex-item-desert" href="/game" id="btn-desert" value="DESERT">
-                <div class="capa">
-                    <h2></h2>
-                </div>
-            </a>
-            <a class="flex-item-forest" href="/game" id="btn-forest" value="FOREST">
-                <div class="capa">
-                    <h2></h2>
-                </div>
-            </a>
-            <a class="flex-item-snow" href="/game" id="btn-snow" value="SNOW">
-                <div class="capa">
-                    <h2></h2>
-                </div>
-            </a>
-        </div>
+    <div class="flex-container">
+        <a class="flex-item-desert" href="/game" id="btn-desert" value="DESERT">
+            <div class="capa">
+                <h2></h2>
+            </div>
+        </a>
+        <a class="flex-item-forest" href="/game" id="btn-forest" value="FOREST">
+            <div class="capa">
+                <h2></h2>
+            </div>
+        </a>
+        <a class="flex-item-snow" href="/game" id="btn-snow" value="SNOW">
+            <div class="capa">
+                <h2></h2>
+            </div>
+        </a>
     </div>
+</div>
 
 <!--Btn Return-->
 <a class="button" href="/dificulty" id="btn-return" style="--clr:#8A7DFD">
     <span></span>
     <i id="#regreso"></i>
-    <i class='bx bx-undo'></i>
+    <i class="bx bx-undo"></i>
 </a>
