--- a/src/frontend/styles/style.css
+++ b/src/frontend/styles/style.css
@@ -9,8 +9,8 @@ body {
     overflow: hidden;
 }
 
-.bg-blue {
-    background: #0c192c !important;
+.bg-purple {
+    background: #1B1B36 !important;
 }
 
 body::before {
@@ -23,6 +23,12 @@ body::before {
     left: 0;
     opacity: 0.1;
     z-index: -1;
+}
+
+.text {
+    font-family: 'Silkscreen', cursive !important;
+    font-size: 42px !important;
+    text-shadow: 0 0 20px #A29CD7 !important;
 }
 
 h2 {
