--- a/src/frontend/styles/style.css
+++ b/src/frontend/styles/style.css
@@ -9,21 +9,19 @@ body {
     overflow: hidden;
 }
 
-.bg-purple {
-    background: #1B1B36 !important;
-}
-
 body::before {
-    position: absolute;
-    content: "";
     background: linear-gradient(45deg, #CC2F64, #8A2FCC);
+    content: "";
+    position: absolute;
     width: 100%;
+    min-width: 100vw;
     min-height: 100vh;
     top: 0;
     left: 0;
     opacity: 0.1;
     z-index: -1;
 }
+
 
 .text {
     font-family: 'Silkscreen', cursive !important;
@@ -46,8 +44,8 @@ h2 {
 
 .button {
     background: #444;
-    color: #fff;
-    border-color: #fff;
+    color: #FFFFFF;
+    border-color: #FFFFFF;
     text-decoration: none;
     text-transform: uppercase;
     font-family: 'Silkscreen', cursive;
@@ -271,9 +269,6 @@ p{
 }
 
 
-.content {
-    display: none;
-}
 
 /*-----------------------------------------------------------------------------*/
 
@@ -287,6 +282,13 @@ p{
     position: relative;
     margin-top: 5%;
     box-shadow: 2px 5px 20px rgba(191, 164, 255, 0.5);
+    overflow-y: scroll;
+}
+
+.box {
+    background: rgba(12, 25, 44, .4);
+    box-shadow: 2px 5px 20px rgba(191, 164, 255, 0.5);
+    overflow-y: scroll;
 }
 
 /*--------------------------------------------------------------------------------------*/
@@ -311,16 +313,11 @@ nav button {
 
 
 .ajustes {
-    float: right;
-    width: 60%;
-    height: 100%;
+    
 }
 
 .graficos {
-    position: absolute;
-    width: 70%;
-    margin-left: -100px;
-    margin-top: 60px;
+    
 }
 
 label {
@@ -330,12 +327,11 @@ label {
     text-shadow: 0 0 20px #A29CD7;
 }
 
-input[type="range"]{
+input[type="range"] {
     width:50%;
-    padding-left: 20px;
 }
 
-input::-webkit-slider-thumb{
+input::-webkit-slider-thumb {
     -webkit-appearance: none;
     background: rgb(145, 88, 236) !important;
     box-shadow: 0 0 20px #A29CD7 ;
