--- a/src/frontend/views/configuration.html
+++ b/src/frontend/views/configuration.html
@@ -36,37 +36,39 @@
                 <input type="range" class="form-range" id="fov-id" name="fov-name" min="0" max="100"><br><br>
             </div>
 
-            <div class="text-center form-check form-switch">
+             <div class="text-center form-switch">
                 <label class="form-check-label" for="sombras-id">SOMBRAS</label>
-                <input class="form-check-input" type="checkbox" role="switch" id="sombras-id" name="sombras-name">
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="sombras-id" name="sombras-name">
 
-            </div>
-
-            <label class="form-label">OUTPUT ENCODING</label>
-
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="srgb-id" name="srgb-name">
-                <label class="form-check-label" for="srgb-id">SRGBENCODING</label>
-            </div>
-
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="dllas-id" name="dllas-name">
-                <label class="form-check-label" for="dllas-id">NA DLLAS</label>
-            </div>
-
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="none-id" name="none-name">
-                <label class="form-check-label" for="none-id">NINGUNA</label>
-            </div>
-
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="linear-id" name="linear-name">
-                <label class="form-check-label" for="linear-id">LINEAR ENCODING</label>
             </div>
             
-            <div class="text-center form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="antialias-id" name="antialias-name">
+            <div class="text-center py-3">
+                <label class="form-label">OUTPUT ENCODING</label>
+            </div>
+
+            <div class="text-center form-switch">
+                <label class="form-check-label px-3 mx-4" for="srgb-id">SRGBENCODING</label>
+                <input class="form-check-input" type="checkbox" role="switch" id="srgb-id" name="srgb-name">
+            </div>
+
+            <div class="text-center form-switch">
+                <label class="form-check-label" for="dllas-id">NA DLLAS</label>
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="dllas-id" name="dllas-name">
+            </div>
+
+            <div class="text-center form-switch">
+                <label class="form-check-label" for="none-id">NINGUNA</label>
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="none-id" name="none-name">
+            </div>
+
+            <div class="text-center form-switch">
+                <label class="form-check-label" for="linear-id">LINEAR ENCODING</label>
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="linear-id" name="linear-name">
+            </div>
+            
+            <div class="text-center form-switch">
                 <label class="form-check-label" for="antialias-id">ANTIALIAS</label>
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="antialias-id" name="antialias-name">
             </div>
 
             <button type="submit" class="button button-anim" id="aceptar-graficos" value="aceptar"
