--- a/src/frontend/views/dificulty.html
+++ b/src/frontend/views/dificulty.html
@@ -1,31 +1,18 @@
-
 <div class="container">
-    <div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="row d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h2 id="dificulty-title"></h2>
+            <h1 id="dificulty-title"></h1>
 
-            <!--Btn facil-->
             <div>
                 <a class="btn button button-anim" id="btn-easy" style="--clr:#8A7DFD" href="/scenarios" value="NORMAL">
                     <span>MODO FÁCIL</span>
                     <i class="widget"></i>
                 </a>
             </div>
-
-            <!--Btn dificil-->
             <div>
                 <a class="btn button button-anim" id="btn-hard" style="--clr:#8A7DFD" href="/scenarios" value="HARD">
                     <span>MODO DÍFICIL</span>
                     <i class="widget"></i>
-                </a>
-            </div>
-
-            <!--Btn Return-->
-            <div>
-                <a class="button" type="submit" href="/mode" id="btn-return" style="--clr:#8A7DFD">
-                    <span></span>
-                    <i id="regreso"></i>
-                    <i class="bx bx-undo"></i>
                 </a>
             </div>
         </div>
