--- a/src/frontend/views/mode.html
+++ b/src/frontend/views/mode.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="row d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h2 id="mode-title"></h2>
-
+            <h1 id="mode-title"></h1>
             <div>
                 <a class="btn button button-anim" href="/dificulty" id="btn-checkmate" value="CHECKMATE"
                     style="--clr:#8A7DFD">
@@ -10,20 +9,11 @@
                     <i class="widget"></i>
                 </a>
             </div>
-
             <div>
                 <a class="btn button button-anim" href="/dificulty" id="btn-coldwar" style="--clr:#8A7DFD"
                     value="COLDWAR">
                     <span>GUERRA FRÍA</span>
                     <i class="widget"></i>
-                </a>
-            </div>
-
-            <div>
-                <a class="button" href="/players" id="btn-return" style="--clr:#8A7DFD">
-                    <span></span>
-                    <i id="#regreso"></i>
-                    <i class="bx bx-undo"></i>
                 </a>
             </div>
         </div>
