--- a/src/frontend/views/players.html
+++ b/src/frontend/views/players.html
@@ -1,27 +1,19 @@
-
 <section class="container">
-    <div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="row d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h2 id="players-title"></h2>
+            <h1 id="players-title"></h1>
             <div>
                 <a class="btn button button-anim" id="btn-singleplayer" href="/mode" value="SINGLEPLAYER">
-                    <span><i class="bx bx-user"></i> LOCAL</span>
+                    <span><i class="bx bx-user"></i>LOCAL</span>
                     <i class="widget"></i>
                 </a>
             </div>
             <div>
                 <a class="btn button button-anim" id="btn-multiplayer" href="/mode" value="MULTIPLAYER">
-                    <span><i class="bx bx-group"></i> EN LÍNEA</span>
+                    <span><i class="bx bx-group"></i>EN LÍNEA</span>
                     <i class="widget"></i>
                 </a>
             </div>
         </div>
-    </div>
-    <div>
-        <a class=" button" href="/" id="btn-return" style="--clr:#8A7DFD">
-            <span></span>
-            <i id="regreso"></i>
-            <i class="bx bx-undo"></i>
-        </a>
     </div>
 </section>
