--- a/src/frontend/views/configuration.html
+++ b/src/frontend/views/configuration.html
@@ -30,16 +30,16 @@
 
 <div class="container">
     <div class="row d-flex justify-content-center">
-        <form action="" id="graphics-form" class="p-5 box col-7">
+        <form action="#" id="graphics-form" class="p-5 box col-7">
             <div class="text-center">
                 <label for="fov-id" class="form-label">FOV</label>
-                <input type="range" class="form-range" id="fov-id" name="fov-name" min="0" max="100"><br><br>
+                <input type="range" class="form-range" id="fov" name="fov" min="0" max="100">
+                <p class="d-inline" id="fov-value"></p>
             </div>
 
              <div class="text-center form-switch">
                 <label class="form-check-label" for="sombras-id">SOMBRAS</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="sombras-id" name="sombras-name">
-
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="shadows" name="shadows">
             </div>
             
             <div class="text-center py-3">
@@ -48,29 +48,19 @@
 
             <div class="text-center form-switch">
                 <label class="form-check-label px-3 mx-4" for="srgb-id">SRGBENCODING</label>
-                <input class="form-check-input" type="checkbox" role="switch" id="srgb-id" name="srgb-name">
-            </div>
-
-            <div class="text-center form-switch">
-                <label class="form-check-label" for="dllas-id">NA DLLAS</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="dllas-id" name="dllas-name">
-            </div>
-
-            <div class="text-center form-switch">
-                <label class="form-check-label" for="none-id">NINGUNA</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="none-id" name="none-name">
+                <input class="form-check-input" type="radio" role="switch" id="srgb" name="encoding" value="srgb">
             </div>
 
             <div class="text-center form-switch">
                 <label class="form-check-label" for="linear-id">LINEAR ENCODING</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="linear-id" name="linear-name">
+                <input class="form-check-input px-3 mx-2" type="radio" role="switch" id="linear" name="encoding" value="linear">
             </div>
             
+        
             <div class="text-center form-switch">
-                <label class="form-check-label" for="antialias-id">ANTIALIAS</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="antialias-id" name="antialias-name">
+                <label class="form-check-label" for="antialiasing">ANTI-ALIASING</label>
+                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="antialias" name="antialias">
             </div>
-
             <button type="submit" class="button button-anim" id="aceptar-graficos" value="aceptar"
                 style="--clr:#8A7DFD">
                 <span>ACEPTAR</span>
@@ -164,12 +154,4 @@
         </div>
     </div>
 -->
-<!--Btn Return-->
-<div>
-    <a class="button" href="/" id="btn-return" style="--clr:#8A7DFD">
-        <span></span>
-        <i id="regreso"></i>
-        <i class="bx bx-undo"></i>
-    </a>
-</div>
 </div>
