--- a/src/frontend/views/home.html
+++ b/src/frontend/views/home.html
@@ -71,20 +71,17 @@
     </div>
 
     <div id="menu-buttons">
-
-        <!--<button id="fab">Click me</button>-->
-
         <!--Btn Start-->
         <div>
-            <a class="button clikeable" href="/players" id="btn-play" style="--clr:#8A7DFD">
-                <span class="clickeable">JUGAR</span>
+            <a class="button" href="/players" id="btn-play" style="--clr:#8A7DFD">
+                <span>JUGAR</span>
                 <i class="clickeable"></i>
             </a>
         </div>
 
         <!--Btn Config-->
         <div style="display:inline">
-            <a href="/configuration" class="btn button clickeable" id="btn-config"
+            <a href="/configuration" class="btn button button-anim" id="btn-config"
                 style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="mov" class="clickeable"></i>
@@ -94,8 +91,7 @@
 
         <!--Btn Score-->
         <div style="display:inline">
-            <a href="/score" class="btn button clickeable" id="btn-score" 
-                style="--clr:#8A7DFD; display: inline-block;">
+            <a href="/score" class="btn button clickeable" id="btn-score" style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="mov" class="clickeable"></i>
                 <i class="bx bx-trophy clickeable"></i>
@@ -113,8 +109,7 @@
 
         <!--Btn Usuario-->
         <div style="display:inline">
-            <button class="btn button clickeable" id="btn-user"
-                style="--clr:#8A7DFD; display: inline-block;">
+            <button class="btn button button-anim" id="btn-user" style="--clr:#8A7DFD; display: inline-block;">
                 <span></span>
                 <i id="movu" class="clickeable"></i>
                 <i class="bx bx-exit clickeable"></i>
