--- a/src/frontend/views/configuration.html
+++ b/src/frontend/views/configuration.html
@@ -24,13 +24,14 @@
     </div>
 </div>
 
-<h2 class="config-title mb-4 mt-4">AJUSTES</h2>
+
 <!--Particulas-->
 <div class="bubbles-circle"></div>
 
 <div class="container">
     <div class="row d-flex justify-content-center">
         <form action="#" id="graphics-form" class="p-5 box col-7">
+            <h1 class="title">AJUSTES</h1>
             <div class="text-center">
                 <label for="fov-id" class="form-label">FOV</label>
                 <input type="range" class="form-range" id="fov" name="fov" min="0" max="100">
