--- a/src/frontend/views/dificulty.html
+++ b/src/frontend/views/dificulty.html
@@ -1,16 +1,15 @@
 <div class="container">
     <div class="row d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h1 id="dificulty-title"></h1>
-
+            <h1 class="title">DIFICULTAD</h1>
             <div>
-                <a class="btn button button-anim" id="btn-easy" style="--clr:#8A7DFD" href="/scenarios" value="NORMAL">
+                <a class="btn button button-anim" id="btn-easy" href="/scenarios" value="NORMAL">
                     <span>MODO FÁCIL</span>
                     <i class="widget"></i>
                 </a>
             </div>
             <div>
-                <a class="btn button button-anim" id="btn-hard" style="--clr:#8A7DFD" href="/scenarios" value="HARD">
+                <a class="btn button button-anim" id="btn-hard" href="/scenarios" value="HARD">
                     <span>MODO DÍFICIL</span>
                     <i class="widget"></i>
                 </a>
