--- a/src/frontend/views/game.html
+++ b/src/frontend/views/game.html
@@ -1,5 +1,4 @@
-<div class="loader-wrapper">
-    <h5 id="loading-label">Buscando jugadores...</h5>
+<div>
     <div class="loader">
         <span style="--i:1"></span>
         <span style="--i:2"></span>
@@ -22,4 +21,5 @@
         <span style="--i:19"></span>
         <span style="--i:20"></span>
     </div>
+    <h5 class="text-center" id="loading-label">Buscando jugadores...</h5>
 </div>
