--- a/src/frontend/views/mode.html
+++ b/src/frontend/views/mode.html
@@ -1,21 +1,19 @@
-<div class="container">
+<section class="container">
     <div class="row d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-            <h1 id="mode-title"></h1>
+            <h1 class="title">MODO DE JUEGO</h1>
             <div>
-                <a class="btn button button-anim" href="/dificulty" id="btn-checkmate" value="CHECKMATE"
-                    style="--clr:#8A7DFD">
+                <a class="btn button button-anim" href="/dificulty" id="btn-checkmate" value="CHECKMATE">
                     <span>JAQUE MATE</span>
                     <i class="widget"></i>
                 </a>
             </div>
             <div>
-                <a class="btn button button-anim" href="/dificulty" id="btn-coldwar" style="--clr:#8A7DFD"
-                    value="COLDWAR">
+                <a class="btn button button-anim" href="/dificulty" id="btn-coldwar" value="COLDWAR">
                     <span>GUERRA FRÍA</span>
                     <i class="widget"></i>
                 </a>
             </div>
         </div>
     </div>
-</div>
+</section>
