--- a/src/frontend/views/pause.html
+++ b/src/frontend/views/pause.html
@@ -1,31 +1,22 @@
 <!--<canvas id="canvas"></canvas>-->
-
-<section class="container position-absolute" style="display: none" id="pause-menu">
-    <div class="d-flex align-items-center justify-content-center vh-100">
+<section class="container" style="display: none;" id="pause-menu">
+    <div class="rpw d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
-        <h2 style="font-size:55px">PAUSA</h2>
-
-        <!--Btn Home-->
-        <div>
-            <a class="btn button button-anim" href="/" id="btn-home"
-                >
-                <span></span>
-                <i id="home"></i>
-                <i class="bx bx-home"></i>
-            </a>
+            <h1 class="title">PAUSA</h1>
+            <div class="d-inline-block">
+                <a class="btn button button-anim" href="/" id="btn-home">
+                    <span></span>
+                    <i id="home"></i>
+                    <i class="bx bx-home"></i>
+                </a>
+            </div>
+            <div class="d-inline-block">
+                <a class="btn button button-anim" type="submit" id="btn-resume">
+                    <span></span>
+                    <i id="restart"></i>
+                    <i class="bx bx-redo"></i>
+                </a>
+            </div>
         </div>
-
-        <!--Btn Reiniciar-->
-        <div >
-            <a class="btn button button-anim" type="submit" id="btn-resume" style="--clr:#8A7DFD" 
-            >
-                <span></span>
-                <i id="restart"></i>
-                <i class="bx bx-redo"></i>
-            </a>
-        </div>
-
-    </div>
-
     </div>
 </section>
