--- a/src/frontend/views/login.html
+++ b/src/frontend/views/login.html
@@ -1,7 +1,7 @@
 <section class="container">
-    <div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="row d-flex align-items-center justify-content-center vh-100">
         <form class="text-center" id="login-form">
-            <h2 id="" class="mb-5 mt-3">Inicia sesión</h2>
+            <h1 class="title">Inicia sesión</h1>
 
             <div class="mb-5">
                 <label id="signin1" for="username" class="form-label" role="button">Nombre de usuario:</label>
