--- a/src/frontend/views/scenario.html
+++ b/src/frontend/views/scenario.html
@@ -1,21 +1,24 @@
-<div class="bubbles-circle"></div>
-<div class="container">
-    <h2 id="scenario-title" class="text-center"></h2>
-    <div class="flex-container">
-        <a class="flex-item-desert" href="/game" id="btn-desert" value="DESERT">
-            <div class="capa">
-                <h2></h2>
+<section class="container">
+    <div class="row d-flex align-items-center justify-content-center vh-100">
+        <div class="text-center">
+            <h1 class="title">ESCENARIO</h1>
+            <div class="row mx-2" id="maps">
+                <a class="desert col-md-4 col-12 position-relative p-0" href="/game" id="btn-desert" value="DESERT">
+                    <div class="capa">
+                        <h2>DESIERTO</h2>
+                    </div>
+                </a>
+                <a class="forest col-md-4 col-12 position-relative p-0" href="/game" id="btn-forest" value="FOREST">
+                    <div class="capa">
+                        <h2>BOSQUE</h2>
+                    </div>
+                </a>
+                <a class="snow col-md-4 col-12 position-relative p-0" href="/game" id="btn-snow" value="SNOW">
+                    <div class="capa">
+                        <h2>NIEVE</h2>
+                    </div>
+                </a>
             </div>
-        </a>
-        <a class="flex-item-forest" href="/game" id="btn-forest" value="FOREST">
-            <div class="capa">
-                <h2></h2>
-            </div>
-        </a>
-        <a class="flex-item-snow" href="/game" id="btn-snow" value="SNOW">
-            <div class="capa">
-                <h2></h2>
-            </div>
-        </a>
+        </div>
     </div>
-</div>
+</section>
