--- a/src/frontend/views/score.html
+++ b/src/frontend/views/score.html
@@ -25,10 +25,9 @@
 </div>
 
 <div class="container">
-    <div class="d-flex align-items-center justify-content-center vh-100">
-        <div class="text-center w-100">
-            <h2>PUNTAJES</h2>
-            
+    <div class="row d-flex align-items-center justify-content-center vh-100">
+        <div class="text-center">
+            <h1 class="title">PUNTAJES</h1>
             <div class="table-responsive table-wrapper scrollbar overflow-auto">
                 <table class="table table-striped table-borderless mb-0">
                     <thead class="sticky-top">
@@ -42,7 +41,6 @@
                     </tbody>
                 </table>
             </div>
-
             <!--Stars-->
             <div class="wrapper">
                 <div id="stars"></div>
