--- a/src/frontend/views/signup.html
+++ b/src/frontend/views/signup.html
@@ -1,7 +1,7 @@
 <section class="container">
-    <div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="row d-flex align-items-center justify-content-center vh-100">
         <form class="text-center" id="signup-form">
-            <h2 id="signup-title"></h2>
+            <h1 class="title">REGISTRATE</h1>
 
             <div class="mb-5">
                 <label id="signup1"  for="username" class="form-label" role="button">Nombre de usuario:</label>
