--- a/src/frontend/views/configuration.html
+++ b/src/frontend/views/configuration.html
@@ -1,72 +1,56 @@
-<div class="loader-wrapper">
-    <h5>Cargando...</h5>
-    <div class="loader">
-        <span style="--i:1"></span>
-        <span style="--i:2"></span>
-        <span style="--i:3"></span>
-        <span style="--i:4"></span>
-        <span style="--i:5"></span>
-        <span style="--i:6"></span>
-        <span style="--i:7"></span>
-        <span style="--i:8"></span>
-        <span style="--i:9"></span>
-        <span style="--i:10"></span>
-        <span style="--i:11"></span>
-        <span style="--i:12"></span>
-        <span style="--i:13"></span>
-        <span style="--i:14"></span>
-        <span style="--i:15"></span>
-        <span style="--i:16"></span>
-        <span style="--i:17"></span>
-        <span style="--i:18"></span>
-        <span style="--i:19"></span>
-        <span style="--i:20"></span>
-    </div>
-</div>
-
 
 <!--Particulas-->
 <div class="bubbles-circle"></div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row d-flex justify-content-center">
-        <form action="#" id="graphics-form" class="p-5 box col-7">
-            <h1 class="title">AJUSTES</h1>
-            <div class="text-center">
+        <h1 class="title text-center">AJUSTES</h1>
+        <form action="#" id="graphics-form" class="p-5 box col-12">
+            
+            <div class="d-flex justify-content-between text-center">
                 <label for="fov-id" class="form-label">FOV</label>
-                <input type="range" class="form-range" id="fov" name="fov" min="0" max="100">
+                <input type="range" class="form-range" id="fov" name="fov" min="0" max="100" step="1">
                 <p class="d-inline" id="fov-value"></p>
             </div>
 
-             <div class="text-center form-switch">
+            <div class="d-flex justify-content-between form-switch p-0">
                 <label class="form-check-label" for="sombras-id">SOMBRAS</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="shadows" name="shadows">
+                <input class="form-check-input" type="checkbox" role="switch" id="shadows" name="shadows">
             </div>
             
-            <div class="text-center py-3">
+            <div class="d-flex justify-content-between">
                 <label class="form-label">OUTPUT ENCODING</label>
             </div>
 
-            <div class="text-center form-switch">
-                <label class="form-check-label px-3 mx-4" for="srgb-id">SRGBENCODING</label>
+            <div class="d-flex justify-content-between form-switch">
+                <label class="form-check-label" for="srgb-id">SRGBENCODING</label>
                 <input class="form-check-input" type="radio" role="switch" id="srgb" name="encoding" value="srgb">
             </div>
 
-            <div class="text-center form-switch">
+            <div class="d-flex justify-content-between form-switch">
                 <label class="form-check-label" for="linear-id">LINEAR ENCODING</label>
-                <input class="form-check-input px-3 mx-2" type="radio" role="switch" id="linear" name="encoding" value="linear">
+                <input class="form-check-input" type="radio" role="switch" id="linear" name="encoding" value="linear">
             </div>
             
-        
-            <div class="text-center form-switch">
+            <div class="d-flex justify-content-between form-switch p-0">
                 <label class="form-check-label" for="antialiasing">ANTI-ALIASING</label>
-                <input class="form-check-input px-3 mx-2" type="checkbox" role="switch" id="antialias" name="antialias">
+                <input class="form-check-input" type="checkbox" role="switch" id="antialias" name="antialias">
             </div>
+
+            <div class="d-flex justify-content-between text-center">
+                <label for="volume-id" class="form-label">VOLUMEN</label>
+                <input type="range" class="form-range" id="volume-id" name="volume_name" min="0" max="100"><br>
+                <p class="d-inline" id="fov-value"></p>
+            </div>
+
+             
+
             <button type="submit" class="button button-anim" id="aceptar-graficos" value="aceptar"
                 style="--clr:#8A7DFD">
                 <span>ACEPTAR</span>
             </button>
 
+            
         </form>
     </div>
 </div>
